--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-burger",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tolkinsl.github.io/react-burger/",
+  "homepage": "./",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -54,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.7",
     "gh-pages": "^6.0.0"
   }
 }
